Add build and contributing docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,5 +6,6 @@ pages:
   - log-appender.md
   - log-collector.md
   - alerting-engine.md
-  - csd.md
-  - parcel.md
+  - building.md
+  - contributing.md
+
